# ssm-orp

./: .gitignore  README.md  pyproject.toml  train.py
.github/workflows/: tests.yml
feat/ssm-knowledge-distillation/: .gitignore  analysis.ipynb  distillation_results.csv  robustness_results.csv
feat/ssm-knowledge-distillation/scripts/: dataset.py  distill.py  evaluate_robustness.py  student.py  teacher.py  test_models.py  train_teacher.py
feat/ssm-knowledge-distillation/tools/: download_dataset.py
feat/ssm-layer-sharing/: .gitignore  README.md  pyproject.toml
feat/ssm-layer-sharing/info/: mnist.txt
feat/ssm-layer-sharing/src/ssm_sharing/: __init__.py  dataset.py  evaluate.py  train.py
feat/ssm-layer-sharing/src/ssm_sharing/models/: __init__.py  classifier.py  mamba_shared.py  mamba_standard.py
feat/ssm-layer-sharing/ssm_sharing/models/: __init__.py  baseline.py  blocks.py  shared.py
feat/ssm-layer-sharing/tests/: test_models.py  test_params.py
notebooks/: iqc_experiment.ipynb
results/: combined_results.csv
sparse-ssm/: .gitignore  README.md
sparse-ssm/.github/workflows/: tests.yml
src/experiments/: run_cifar.py
src/ssm_early_exit/: evaluate.py  model.py  train.py
src/train/: train.py
src/utils/: metrics.py
src/verification/: deep_sdp.py
ssm-deq-robustness/: evaluate.py  pyproject.toml  result_evaluetion_for_pipeline_AD.ipynb
ssm-deq-robustness/attacks/: __init__.py  adversarial.py  corruption.py
ssm-deq-robustness/checkpoints/mdeq/: MDEQ_best.pth
ssm-deq-robustness/checkpoints/sresnet/: ResNet_best.pth
ssm-deq-robustness/models/: __init__.py  deq_modules.py  resnet_modules.py
ssm-deq-robustness/utils/: data_loader.py  engine.py
ssm-early-exit/: .gitignore  main.py
ssm-early-exit/src/ssm_early_exit/: data.py  utils.py
ssm-early-exit/tests/: test_metrics.py
ssm-image-classification/: README.md  py_ssm.toml
ssm-image-classification/configs/: config.py
ssm-image-classification/data/: dataset.py
ssm-image-classification/experiments/: run_baseline.py  run_finetune.py  run_frozen.py  run_frozen_train.py
ssm-image-classification/models/: baseline_cnn.py  finetune_model.py  frozen_model.py  mamba_backbone.py
ssm-image-classification/training/: evaluate.py  train.py
ssm-knowledge-distillation/: .gitignore
ssm-knowledge-distillation/feat/ssm-knowledge-distillation/: .gitignore  README.md  distillation_results.csv  distillation_results_small_student.csv  pyproject.toml  robustness_results_small_student.csv  task.md
ssm-knowledge-distillation/feat/ssm-knowledge-distillation/scripts/: distill.py  evaluate_robustness.py  student.py  teacher.py  train_teacher.py
ssm-knowledge-distillation/feat/ssm-knowledge-distillation/tools/: download_dataset.py
ssm-layer-sharing/feat/ssm-layer-sharing/: .gitignore  README.md  pyproject.toml
ssm-layer-sharing/feat/ssm-layer-sharing/info/: listops.txt  synthetic.txt
ssm-layer-sharing/feat/ssm-layer-sharing/src/ssm_sharing/: dataset.py  evaluate.py  utils.py
ssm-layer-sharing/feat/ssm-layer-sharing/src/ssm_sharing/models/: classifier.py  mamba_shared.py
ssm-layer-sharing/feat/ssm-layer-sharing/tests/: test_params.py
ssm-lipschitz-regularization/: README.md  pyproject.toml
ssm-lipschitz-regularization/src/: evaluate.py  models.py  train.py
ssm-lora-injection/: README.md
ssm-magnitude-pruning/ssm_magnitude_pruning/magnitude_pruning/: experiment.py  model.py  train.py
ssm-modality-embedding-swap/: main.py
ssm-prefix-tuning/: .gitignore  README.md  pyproject.toml
ssm-prefix-tuning/experiments/: analyze.py  run_comparison.py  run_full_finetune.py  run_lora.py  run_prefix_length_sweep.py  run_prefix_tuning.py
ssm-prefix-tuning/results/comparison/: comparison.csv
ssm-prefix-tuning/results/comparison/full/: epoch_results.json
ssm-prefix-tuning/results/comparison/lora/: epoch_results.json
ssm-prefix-tuning/results/comparison/prefix_periodic/: epoch_results.json
ssm-prefix-tuning/results/prefix_sweep/: sweep_results.csv
ssm-prefix-tuning/src/ssm_prefix_tuning/: __init__.py  config.py  data.py  evaluator.py  lora_model.py  model_wrapper.py  prefix_encoder.py  trainer.py  utils.py
ssm-prefix-tuning/tests/: test_data.py  test_evaluator.py  test_model_wrapper.py  test_prefix_encoder.py  test_trainer.py
ssm-ptq-quantization/: README.md
ssm-sparse/.github/workflows/: tests.yml
ssm-sparse/sparse-ssm/: .gitignore  README.md  main.py  pyproject.toml
ssm-sparse/sparse-ssm/eval/: perplexity.py
ssm-sparse/sparse-ssm/prune/: sparsessm.py
ssm-sparse/sparse-ssm/results/: mamba-130m-hf_sp50pct_structured.json  mamba-130m-hf_sp50pct_unstructured.json
ssm-sparse/sparse-ssm/tests/: test_core.py
ssm-viz-iqc/: REAMDE.md  pyproject.toml
ssm-viz-iqc/notebooks/: another_experiment.ipynb
ssm-viz-iqc/results/: cifar_results.csv  mnist_results.csv
ssm-viz-iqc/src/attacks/: pgd.py
ssm-viz-iqc/src/data/: cifar.py  mnist.py
ssm-viz-iqc/src/experiments/: run_mnist.py
ssm-viz-iqc/src/models/: cifar_model.py  mnist_model.py
ssm-viz-iqc/src/utils/: extract_weights.py  seed.py
ssm-viz-iqc/src/verification/: solver.py
ssm-viz-iqc/tests/: test.ipynb  test_shapes.py
ssm-viz-seq-teacher/: .gitignore  README.md  main.py  model.py  pyproject.toml  utils.py
ssm-viz-seq-teacher/tests/: test_run.py
ssm_magnitude_pruning/: .gitignore  README.md  notebook.ipynb  pyproject.toml
ssm_magnitude_pruning/magnitude_pruning/: README.md  __init__.py  dataset.py  experiment.py  pruning.py  train.py  visualization.py
ssm_magnitude_pruning/tests/: test_dataset.py  test_model.py  test_pruning.py
tests/: run_test.py  test_data.py  test_model.py  test_pgd.py  test_sdp.py  test_ssm.py
