[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssm-prefix-tuning"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = ">=3.12,<3.15"
dependencies = [
    "transformers>=4.39.0",
    "peft>=0.10.0",        
    "datasets>=2.18.0",       
    "evaluate>=0.4.1",       
    "scikit-learn>=1.4.0",   
    "numpy>=1.26.0",
    "pandas>=2.2.0",          
    "tqdm>=4.66.0",
    "accelerate>=0.27.0",     
    "matplotlib>=3.8.0",      
    "pytest (>=9.0.2,<10.0.0)",
    "tabulate (>=0.10.0,<0.11.0)",
    "torch (>=2.6.0,<3.0.0)",
]

[project.optional-dependencies]
gpu = [
    "causal-conv1d>=1.4.0",
    "mamba-ssm>=1.2.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "slow: requires downloading pretrained model weights (~500 MB)",
    "gpu: requires a CUDA-capable GPU",
]

[[tool.poetry.source]]
name = "pytorch-cu124"
url = "https://download.pytorch.org/whl/cu124"
priority = "supplemental"


[tool.poetry.dependencies]
torch = {source = "pytorch-cu124"}
