[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "ssm-magnitude-pruning"
version = "0.1.0"
description = "Iterative Magnitude Pruning on SSM (Mamba) for time-series forecasting"
requires-python = ">=3.10"
dependencies = [
    # Data & numerics
    "numpy>=1.26",
    "scipy>=1.12",

    # Evaluation & visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # Progress & utilities
    "tqdm>=4.66",
]

[project.optional-dependencies]
# GPU dependencies require a CUDA environment; install separately on Colab (T4):
#   !pip install torch==2.4.0 --index-url https://download.pytorch.org/whl/cu121
#   !pip install causal-conv1d==1.4.0 && pip install mamba-ssm==2.2.2 --no-build-isolation
gpu = [
    "torch>=2.1",
    "causal-conv1d>=1.2",
    "mamba-ssm>=2.0",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["magnitude_pruning*"]
