[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ssm-magnitude-pruning"
version = "0.1.0"
description = "Iterative Magnitude Pruning on SSM (Mamba) for time-series forecasting"
requires-python = ">=3.10"
dependencies = [
    # Data & numerics
    "numpy>=1.26",
    "scipy>=1.12",

    # Evaluation & visualization
    "matplotlib>=3.8",
    "seaborn>=0.13",

    # Progress & utilities
    "tqdm>=4.66",

    # NOTE: torch, causal-conv1d, mamba-ssm require CUDA and cannot be
    # installed in a plain .venv on CPU-only machines.
    # Install them manually after activating the venv:
    #
    #   pip install torch==2.4.0 --index-url https://download.pytorch.org/whl/cu121
    #   pip install causal-conv1d==1.4.0
    #   pip install mamba-ssm==2.2.2 --no-build-isolation
    #
    # On Google Colab installed by notebook cell 0.
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=5.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["magnitude_pruning*"]
