[build-system]
requires = ["setuptools >= 77.0.3", "setuptools_scm"]
build-backend = "setuptools.build_meta"

[project]
name = "ssm-layer-sharing"
dynamic = ["version"]
requires-python = ">= 3.8"
authors = [
  {name = "Klymentiev Maksym", email = "dadmon1901@gmail.com"},
]
description = "Lovely Spam! Wonderful Spam!"
readme = "README.md"
license = "MIT"
dependencies = [
    "numpy",
    "scipy",

    "tqdm",
    "matplotlib",

    "torch",
    "torchaudio",
    "einops",
    "mamba-ssm",
    "causal-conv1d"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-benchmark",
    "matplotlib"
]

[project.urls]
Repository = "https://github.com/KlymentievMaksym/ssm-orp.git"
Issues = "https://github.com/KlymentievMaksym/ssm-orp/issues"

[project.scripts]
train = "ssm_sharing.train:train_command"

# [project.entry-points."spam.magical"]
# tomatoes = "spam:main_tomatoes"

[tool.setuptools_scm]
root = "../.."

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"